[tool.poetry]
name = "hw1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hw1"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
black = "^22.12.0"
matplotlib = "^3.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "hw1.main:main"
